Fix 'Great for' spacing top and bottom.

--- a/client/my-sites/plans/jetpack-plans/product-lightbox/style.scss
+++ b/client/my-sites/plans/jetpack-plans/product-lightbox/style.scss
@@ -106,7 +106,7 @@
 }
 
 .product-lightbox__detail-desc {
-	margin-bottom: 0.5rem;
+	margin-bottom: 16px;
 	line-height: 1.5;
 	color: #2c3338;
 	font-size: 1rem;
